more test services, spock update, make sure tests and code coverage runs